--- a/index.html
+++ b/index.html
@@ -11,18 +11,32 @@
      <nav>
         <div class="menu-container">
             <div class="logo">
-                <img class="logo.photo" src="./logo/logo-light.png" alt="">
+                <img class="ig" src="./logo/logo-light.png" alt="">
             </div>
             <div class="menus">
-                <li>Menu 1</li>
-                <li>Menu 2</li>
-                <li>Menu 3</li>
-                <li>Menu 4</li>
+                <li class="item">home-1</li>
+                <li class="item">home-2</li>
+                <li class="item">home-3</li>
+                <li class="item">home-4</li>
             </div>
         </div>
      </nav>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1 class="xy">Better Desing for <br>
+                        your digital products</h1>
+                    <p class="xx">you are a creative studio specializing in UI/UX design,development and stertagy.</p>
+                    <button class="btn">Explore more</button>
+                </div>
+                <div class="banner-photo">
+                    <img class="photo" src="./images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
