--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h1 class="ab">About US</h1>
+            <div class="about-container">
+                <div class="about-text">
+                    <h1 class="ax">We grow brands through bold and <br>stertagy creative</h1>
+                    <p class="axy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    <p class="axy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    <button class="btn">contract us</button>
+                </div>
+                <div class="about-photo">
+                    <img class="photo" src="./images/section.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <h1 class="ab">Our Services</h1>
+            <div class="service-container">
+                <div class="box">
+                    <img class="icon" src="./icon/0.png" alt="">
+                    <h2>Web development</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quae repellat eligendi et? Veniam eaque assumenda laborum sint ab quia.
+                    </p>
+                    <button class="btn">Details</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
